--- a/book---pay.html
+++ b/book---pay.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Book + Pay</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=303049898"/>
-  <link rel="stylesheet" type="text/css" href="css/book---pay.css?crc=3871269383" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3909661950"/>
+  <link rel="stylesheet" type="text/css" href="css/book---pay.css?crc=3981506286" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_book---pay.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=375044772"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_book---pay.css?crc=4168606376" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4243096916"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_book---pay.css?crc=3759923233" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -418,7 +418,7 @@ var muReCAPTCHA2OnloadCallback = function() {
      </div>
      <!-- /m_editable -->
     </div>
-    <div class="verticalspacer shared_content" data-offset-top="2642" data-content-above-spacer="2642" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
+    <div class="verticalspacer shared_content" data-offset-top="2617" data-content-above-spacer="2617" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
     <div class="browser_width grpelem" id="u144-bw">
      <div id="u144"><!-- group -->
       <div class="clearfix" id="u144_align_to_page">
@@ -489,10 +489,10 @@ var muReCAPTCHA2OnloadCallback = function() {
       <div class="clip_frame grpelem temp_no_id" data-orig-id="u60864"><!-- image -->
        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.937888198757764" data-image-width="161" data-image-height="151" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
       </div>
+      <!-- m_editable region-id="editable-static-tag-U7237-BP_1160" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+      <span class="clearfix grpelem placeholder" data-placeholder-for="u7237-4_content"><!-- placeholder node --></span>
+      <!-- /m_editable -->
      </div>
-     <!-- m_editable region-id="editable-static-tag-U7237-BP_1160" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <span class="clearfix colelem placeholder" data-placeholder-for="u7237-4_content"><!-- placeholder node --></span>
-     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U7238-BP_1160" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <span class="clearfix colelem placeholder" data-placeholder-for="u7238-22_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
@@ -805,6 +805,9 @@ var muReCAPTCHA2OnloadCallback = function() {
       <ul class="AccordionWidget clearfix grpelem" id="accordionu14850" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- vertical box -->
        <li class="AccordionPanel borderbox clearfix colelem" id="u14851"><!-- vertical box --><div class="AccordionPanelTab borderbox transition clearfix colelem" id="u14852-3" data-IBE-flags="txtStyleSrc"><!-- content --><p class="shared_content" data-content-guid="u14852-3_0_content">&nbsp;</p></div><div class="AccordionPanelContent disn borderbox gradient clearfix colelem" id="u14853"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu15463" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u15464"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15465" href="index.html" data-href="page:U93"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15468-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15468-4_0_content">Home</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15492"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15495" href="about.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15497-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15497-4_0_content">About</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15471"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15474" href="news.html" data-href="page:U264"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15476-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15476-4_0_content">News</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15513"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15516" href="programme.html" data-href="page:U276"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15519-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15519-4_0_content">Programme</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15478"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15481" href="booking.html" data-href="page:U12766"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15482-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15482-4_0_content">Booking</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15485"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15488" href="attending.html" data-href="page:U324"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15489-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u15489-4_0_content">Attending</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u93913"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u93916" href="memories.html" data-href="page:U4097"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u93919-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u93919-4_0_content">Memories</p></div></a></div></nav></div></li>
       </ul>
+      <div class="clip_frame grpelem temp_no_id shared_content" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u60864" data-content-guid="u60864_content"><!-- image -->
+       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="111" height="104" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
+      </div>
      </div>
      <!-- m_editable region-id="editable-static-tag-U7237-BP_800" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <span class="clearfix colelem placeholder" data-placeholder-for="u7237-4_content"><!-- placeholder node --></span>
@@ -1086,9 +1089,6 @@ var muReCAPTCHA2OnloadCallback = function() {
      <span class="clearfix colelem placeholder" data-placeholder-for="u7244-35_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
     </div>
-    <div class="clip_frame temp_no_id shared_content" data-orig-id="u60864" data-content-guid="u60864_content"><!-- image -->
-     <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="111" height="104" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
-    </div>
     <div class="verticalspacer" data-offset-top="2847" data-content-above-spacer="2846" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
      <div class="gradient temp_no_id" data-orig-id="u144"><!-- group -->
@@ -1124,6 +1124,7 @@ var muReCAPTCHA2OnloadCallback = function() {
       <ul class="AccordionWidget clearfix grpelem temp_no_id" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-orig-id="accordionu14850"><!-- vertical box -->
        <li class="AccordionPanel borderbox clearfix colelem temp_no_id" data-orig-id="u14851"><!-- vertical box --><div class="AccordionPanelTab borderbox transition clearfix colelem temp_no_id" data-IBE-flags="txtStyleSrc" data-orig-id="u14852-3"><!-- content --><span class="placeholder" data-placeholder-for="u14852-3_0_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent disn borderbox gradient clearfix colelem temp_no_id" data-orig-id="u14853"><!-- group --><nav class="MenuBar clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="menuu15463"><!-- vertical box --><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15464"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="index.html" data-href="page:U93" data-orig-id="u15465"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15468-4"><!-- content --><span class="placeholder" data-placeholder-for="u15468-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15492"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="about.html" data-href="page:U252" data-orig-id="u15495"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15497-4"><!-- content --><span class="placeholder" data-placeholder-for="u15497-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15471"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="news.html" data-href="page:U264" data-orig-id="u15474"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15476-4"><!-- content --><span class="placeholder" data-placeholder-for="u15476-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15513"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="programme.html" data-href="page:U276" data-orig-id="u15516"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15519-4"><!-- content --><span class="placeholder" data-placeholder-for="u15519-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15478"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="booking.html" data-href="page:U12766" data-orig-id="u15481"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15482-4"><!-- content --><span class="placeholder" data-placeholder-for="u15482-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u15485"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="attending.html" data-href="page:U324" data-orig-id="u15488"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u15489-4"><!-- content --><span class="placeholder" data-placeholder-for="u15489-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u93913"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u93916"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u93919-4"><!-- content --><span class="placeholder" data-placeholder-for="u93919-4_0_content"><!-- placeholder node --></span></div></a></div></nav></div></li>
       </ul>
+      <span class="clip_frame grpelem placeholder" data-placeholder-for="u60864_content"><!-- placeholder node --></span>
      </div>
      <!-- m_editable region-id="editable-static-tag-U7237-BP_600" template="book---pay.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <span class="clearfix colelem placeholder" data-placeholder-for="u7237-4_content"><!-- placeholder node --></span>
@@ -1405,7 +1406,6 @@ var muReCAPTCHA2OnloadCallback = function() {
      <span class="clearfix colelem placeholder" data-placeholder-for="u7244-35_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
     </div>
-    <span class="clip_frame placeholder" data-placeholder-for="u60864_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="2929" data-content-above-spacer="2928" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
      <div class="gradient temp_no_id" data-orig-id="u144"><!-- group -->
