--- a/memories.html
+++ b/memories.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Memories</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4056291551"/>
-  <link rel="stylesheet" type="text/css" href="css/memories.css?crc=366916653" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3909661950"/>
+  <link rel="stylesheet" type="text/css" href="css/memories.css?crc=114173627" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_memories.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=375044772"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_memories.css?crc=470854743" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4243096916"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_memories.css?crc=4097301613" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -82,12 +82,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clip_frame grpelem" id="u60864"><!-- image -->
        <img class="block temp_no_img_src" id="u60864_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9352941176470588" data-image-width="170" data-image-height="159" src="images/blank.gif?crc=4208392903"/>
       </div>
+      <!-- m_editable region-id="editable-static-tag-U6080-BP_infinity" template="memories.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+      <div class="clearfix grpelem shared_content" id="u6080-4" data-muse-uid="U6080" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u6080-4_content"><!-- content -->
+       <p>School Photos</p>
+      </div>
+      <!-- /m_editable -->
      </div>
-     <!-- m_editable region-id="editable-static-tag-U6080-BP_infinity" template="memories.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix colelem shared_content" id="u6080-4" data-muse-uid="U6080" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u6080-4_content"><!-- content -->
-      <p>School Photos</p>
-     </div>
-     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U6081-BP_infinity" template="memories.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <div class="rounded-corners clearfix colelem shared_content" id="u6081-6" data-muse-uid="U6081" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u6081-6_content"><!-- content -->
       <p>Do you have old class photos from primary or secondary school that you'd be happy to share? If so, please e-mail them to us: <a class="nonblock" href="mailto:mail@reunionhebrides.com">mail@reunionhebrides.com</a></p>
@@ -153,7 +153,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer shared_content" data-offset-top="1847" data-content-above-spacer="1846" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
+    <div class="verticalspacer shared_content" data-offset-top="1822" data-content-above-spacer="1821" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
     <div class="browser_width grpelem" id="u144-bw">
      <div id="u144"><!-- group -->
       <div class="clearfix" id="u144_align_to_page">
@@ -387,7 +387,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1496" data-content-above-spacer="1496" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer shared_content" data-offset-top="1496" data-content-above-spacer="1496" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content1"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
      <div class="gradient temp_no_id" data-orig-id="u144"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
@@ -408,6 +408,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <ul class="AccordionWidget clearfix grpelem" id="accordionu14850" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- vertical box -->
        <li class="AccordionPanel borderbox clearfix colelem" id="u14851"><!-- vertical box --><div class="AccordionPanelTab borderbox transition clearfix colelem" id="u14852-3" data-IBE-flags="txtStyleSrc"><!-- content --><p>&nbsp;</p></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u14853"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu15463" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u15464"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15465" href="index.html" data-href="page:U93"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15468-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Home</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15492"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15495" href="about.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15497-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>About</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15471"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15474" href="news.html" data-href="page:U264"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15476-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>News</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15513"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15516" href="programme.html" data-href="page:U276"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15519-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Programme</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15478"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15481" href="booking.html" data-href="page:U12766"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15482-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Booking</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15485"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15488" href="attending.html" data-href="page:U324"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15489-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Attending</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u93913"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u93916" href="memories.html" data-href="page:U4097"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u93919-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Memories</p></div></a></div></nav></div></li>
       </ul>
+      <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u60864"><!-- image -->
+       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="111" height="104" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
+      </div>
      </div>
      <!-- m_editable region-id="editable-static-tag-U6080-BP_800" template="memories.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <span class="clearfix colelem placeholder" data-placeholder-for="u6080-4_content"><!-- placeholder node --></span>
@@ -469,10 +472,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="clip_frame temp_no_id" data-orig-id="u60864"><!-- image -->
-     <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="111" height="104" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
-    </div>
-    <div class="verticalspacer" data-offset-top="1496" data-content-above-spacer="1496" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <span class="verticalspacer placeholder" data-placeholder-for="page_1_content1"><!-- placeholder node --></span>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
      <div class="temp_no_id" data-orig-id="u144"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
