--- a/programme.html
+++ b/programme.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Programme</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4056291551"/>
-  <link rel="stylesheet" type="text/css" href="css/programme.css?crc=3884600911" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3909661950"/>
+  <link rel="stylesheet" type="text/css" href="css/programme.css?crc=4157823075" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_programme.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=375044772"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_programme.css?crc=4282629979" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4243096916"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_programme.css?crc=4018682" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -82,12 +82,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clip_frame grpelem" id="u60864"><!-- image -->
        <img class="block temp_no_img_src" id="u60864_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9352941176470588" data-image-width="170" data-image-height="159" src="images/blank.gif?crc=4208392903"/>
       </div>
+      <!-- m_editable region-id="editable-static-tag-U2116-BP_infinity" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+      <div class="clearfix grpelem shared_content" id="u2116-4" data-muse-uid="U2116" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u2116-4_content"><!-- content -->
+       <p>Event Programme</p>
+      </div>
+      <!-- /m_editable -->
      </div>
-     <!-- m_editable region-id="editable-static-tag-U2116-BP_infinity" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix colelem shared_content" id="u2116-4" data-muse-uid="U2116" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u2116-4_content"><!-- content -->
-      <p>Event Programme</p>
-     </div>
-     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U3974-BP_infinity" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <div class="rounded-corners clearfix colelem shared_content" id="u3974-4" data-muse-uid="U3974" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u3974-4_content"><!-- content -->
       <p>Intro text</p>
@@ -116,8 +116,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U12333-BP_infinity" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-       <div class="clearfix colelem" id="u12333-4" data-muse-uid="U12333" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-        <p>Text</p>
+       <div class="clearfix colelem" id="u12333-18" data-muse-uid="U12333" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+        <p>The weekends main event.&nbsp; A chance to dress up and catch up with former classmates.&nbsp; Find out what people have been up to since school, reminisce over school-time memories and enjoy a great evening of entertainment.</p>
+        <p>&nbsp;</p>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
+        <p>&nbsp;</p>
        </div>
        <!-- /m_editable -->
       </div>
@@ -133,7 +141,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U12372-BP_infinity" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
        <div class="clearfix colelem" id="u12372-6" data-muse-uid="U12372" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-        <p>Coll Sports Hall</p>
+        <p>Venue TBC</p>
         <p>1.00pm to 3.00pm</p>
        </div>
        <!-- /m_editable -->
@@ -145,20 +153,34 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U12349-BP_infinity" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-       <div class="clearfix colelem" id="u12349-4" data-muse-uid="U12349" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-        <p>Text</p>
+       <div class="clearfix colelem" id="u12349-16" data-muse-uid="U12349" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+        <p>A free event.&nbsp; Open to all reunion attendees and families.&nbsp; A great chance to unwind and enjoy some activities.&nbsp; Fresh air is good for relieving hangovers so well worth attending if you're going to make it through to Saturday evening!</p>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
        </div>
        <!-- /m_editable -->
       </div>
      </div>
      <div class="rounded-corners clearfix colelem shared_content" id="u12377" data-content-guid="u12377_content"><!-- group -->
-      <!-- m_editable region-id="editable-static-tag-U12380-BP_infinity" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-      <div class="clearfix grpelem" id="u12380-8" data-muse-uid="U12380" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-       <p>Saturday</p>
-       <p>13th</p>
-       <p>April</p>
+      <div class="clearfix grpelem" id="pu12380-8"><!-- column -->
+       <!-- m_editable region-id="editable-static-tag-U12380-BP_infinity" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+       <div class="clearfix colelem" id="u12380-8" data-muse-uid="U12380" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+        <p>Saturday</p>
+        <p>13th</p>
+        <p>April</p>
+       </div>
+       <!-- /m_editable -->
+       <!-- m_editable region-id="editable-static-tag-U100535-BP_infinity" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+       <div class="clearfix colelem" id="u100535-6" data-muse-uid="U100535" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+        <p>Venue TBC</p>
+        <p>7.00pm to 1.00am</p>
+       </div>
+       <!-- /m_editable -->
       </div>
-      <!-- /m_editable -->
       <div class="clearfix grpelem" id="pu12379-4"><!-- column -->
        <!-- m_editable region-id="editable-static-tag-U12379-BP_infinity" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
        <div class="clearfix colelem" id="u12379-4" data-muse-uid="U12379" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
@@ -166,14 +188,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U12378-BP_infinity" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-       <div class="clearfix colelem" id="u12378-4" data-muse-uid="U12378" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-        <p>Text</p>
+       <div class="clearfix colelem" id="u12378-17" data-muse-uid="U12378" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+        <p id="u12378-2">An informal party with buffet and live music until the wee small hours.&nbsp; Should be a great night.&nbsp; Partners are also welcome to purchase tickets for this evening.</p>
+        <p id="u12378-4">.</p>
+        <p id="u12378-6">.</p>
+        <p id="u12378-8">.</p>
+        <p id="u12378-10">.</p>
+        <p id="u12378-12">.</p>
+        <p id="u12378-14">.</p>
+        <p id="u12378-15">&nbsp;</p>
        </div>
        <!-- /m_editable -->
       </div>
      </div>
     </div>
-    <div class="verticalspacer shared_content" data-offset-top="1408" data-content-above-spacer="1407" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
+    <div class="verticalspacer shared_content" data-offset-top="1383" data-content-above-spacer="1382" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
     <div class="browser_width grpelem" id="u144-bw">
      <div id="u144"><!-- group -->
       <div class="clearfix" id="u144_align_to_page">
@@ -192,7 +221,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="gradient clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem temp_no_id" data-orig-id="ppu67883-3"><!-- column -->
      <div class="clearfix colelem temp_no_id" data-orig-id="pu67883-3"><!-- group -->
-      <span class="gradient clearfix grpelem placeholder" data-placeholder-for="u67883-3_content"><!-- placeholder node --></span>
+      <span class="clearfix grpelem placeholder" data-placeholder-for="u67883-3_content"><!-- placeholder node --></span>
       <nav class="MenuBar clearfix grpelem temp_no_id" data-orig-id="menuu56290"><!-- horizontal box -->
        <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u56291"><!-- vertical box -->
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="index.html" data-href="page:U93" data-orig-id="u56292"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u56293-4"><!-- content --><span class="placeholder" data-placeholder-for="u56293-4_0_content"><!-- placeholder node --></span></div></a>
@@ -243,7 +272,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
-     <div class="gradient temp_no_id" data-orig-id="u144"><!-- group -->
+     <div class="temp_no_id" data-orig-id="u144"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
@@ -262,6 +291,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <ul class="AccordionWidget clearfix grpelem" id="accordionu14850" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- vertical box -->
        <li class="AccordionPanel borderbox clearfix colelem" id="u14851"><!-- vertical box --><div class="AccordionPanelTab borderbox transition clearfix colelem" id="u14852-3" data-IBE-flags="txtStyleSrc"><!-- content --><p>&nbsp;</p></div><div class="AccordionPanelContent disn borderbox gradient clearfix colelem" id="u14853"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu15463" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u15464"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15465" href="index.html" data-href="page:U93"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15468-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Home</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15492"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15495" href="about.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15497-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>About</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15471"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15474" href="news.html" data-href="page:U264"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15476-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>News</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15513"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u15516" href="programme.html" data-href="page:U276"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15519-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Programme</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15478"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15481" href="booking.html" data-href="page:U12766"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15482-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Booking</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15485"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15488" href="attending.html" data-href="page:U324"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15489-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Attending</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u93913"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u93916" href="memories.html" data-href="page:U4097"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u93919-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Memories</p></div></a></div></nav></div></li>
       </ul>
+      <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u60864"><!-- image -->
+       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="111" height="104" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
+      </div>
      </div>
      <!-- m_editable region-id="editable-static-tag-U2116-BP_800" template="programme.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <span class="clearfix colelem placeholder" data-placeholder-for="u2116-4_content"><!-- placeholder node --></span>
@@ -273,10 +305,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u12347_content"><!-- placeholder node --></span>
      <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u12377_content"><!-- placeholder node --></span>
     </div>
-    <div class="clip_frame temp_no_id" data-orig-id="u60864"><!-- image -->
-     <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" width="111" height="104" data-orig-id="u60864_img" src="images/blank.gif?crc=4208392903"/>
-    </div>
-    <div class="verticalspacer" data-offset-top="1408" data-content-above-spacer="1407" data-content-below-spacer="164" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
      <div class="gradient temp_no_id" data-orig-id="u144"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
